добавил кнопку для каждой задачи в html и описание задач в js файл

--- a/2,15.html
+++ b/2,15.html
@@ -1,9 +1,10 @@
-<html>
+<html >
     <head>
-       <tittle> test
+       <tittle> Задачи
        </tittle>
+       <script src="2,15.js"></script>
     </head>
     <body>
-        <script src="2,15.js">
-        </script>
+                <button onClick="zadacha1()">задача 1</button>
+                <button onClick="zadacha2()">задача 2</button>
     </body>
