--- a/2,15.html
+++ b/2,15.html
@@ -7,4 +7,5 @@
     <body>
                 <button onClick="zadacha1()">задача 1</button>
                 <button onClick="zadacha2()">задача 2</button>
+                <button onClick="zadacha3()">задача 3</button>
     </body>
