--- a/2,15.html
+++ b/2,15.html
@@ -3,9 +3,17 @@
        <tittle> Задачи
        </tittle>
        <script src="2,15.js"></script>
+       <script src="2,17.js"></script>
     </head>
     <body>
-                <button onClick="zadacha1()">задача 1</button>
-                <button onClick="zadacha2()">задача 2</button>
-                <button onClick="zadacha3()">задача 3</button>
+        <article>
+            Задачи главы 2.15
+                <button onClick="zadacha1()">задача 2.15.1</button>
+                <button onClick="zadacha2()">задача 2.15.2</button>
+                <button onClick="zadacha3()">задача 2.15.3</button>
+        </article>
+        <article>
+            Задача главы 2.17
+                <button onClick="zadacha4()">задача 1</button>
+        </article>
     </body>
