--- a/2,15.html
+++ b/2,15.html
@@ -4,6 +4,7 @@
        </tittle>
        <script src="2,15.js"></script>
        <script src="2,17.js"></script>
+       <script src="4,4.js"></script>
     </head>
     <body>
         <article>
@@ -15,5 +16,9 @@
         <article>
             Задача главы 2.17
                 <button onClick="zadacha4()">задача 1</button>
+        </article>
+        <article>
+            Задача главы 4.4
+                <button onClick="calc()">calc</button>
         </article>
     </body>
