--- a/2,15.html
+++ b/2,15.html
@@ -5,6 +5,7 @@
        <script src="2,15.js"></script>
        <script src="2,17.js"></script>
        <script src="4,4.js"></script>
+       <script src="5.2.js"></script>
     </head>
     <body>
         <article>
@@ -20,5 +21,10 @@
         <article>
             Задача главы 4.4
                 <button onClick="calc()">calc</button>
+        </article>
+        <article>
+            Задача главы 5.2
+                <button onClick="summa()">summa</button>
+                <button onClick="enterNumber()">readNumber</button>
         </article>
     </body>
