--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="5,4.js"></script>
+    <script src="metodiMassivov.js"></script>
 </body>
 </html>
